third_party/rust/paste/tests/ui/env-non-string.rs
use paste::paste;

paste! {
    fn [<env!(1.31)>]() {}
}

fn main() {}
